[metadata]
name = SciFlow
version = 0.2
url = https://github.com/ChalkLab/sciflow
author = 'Dylan Johnson, Caleb Weber, Stuart Chalk'
author_email = 'n01448636@unf.edu, cweb1182@gmail.com, schalk@unf.edu'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Python/Django package for processing of SciData JSON-LD files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6

[flake8]
 # add options
ignore = E402,E501,F403,F405
